# Quick-RMBG

./: README.md  pyproject.toml  spec.md
dolphin/: quick-rmbg.desktop
quick_rmbg/: __init__.py  cli.py  config.py
scripts/: install.sh  uninstall.sh
